--- a/src/proyecto/pkg2023_ed/Ingresar.form
+++ b/src/proyecto/pkg2023_ed/Ingresar.form
@@ -16,6 +16,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="e9" green="f2" red="ba" type="rgb"/>
     </Property>
+    <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
