Respaldo de Proyecto y Arreglo de Constantes

--- a/src/proyecto/pkg2023_ed/Ordenes.form
+++ b/src/proyecto/pkg2023_ed/Ordenes.form
@@ -87,29 +87,26 @@
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="214" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-
-                  <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jLabel1" max="32767" attributes="0"/>
-                      <Component id="jLabel2" min="-2" pref="127" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="160" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="jLabel1" max="32767" attributes="0"/>
+                          <Component id="jLabel2" min="-2" pref="127" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="errorMaterial1" min="-2" max="-2" attributes="0"/>
-                          <Component id="errorMaterial2" min="-2" max="-2" attributes="0"/>
                           <Component id="errorMaterial3" min="-2" max="-2" attributes="0"/>
-                          <Component id="errorMaterial4" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="errorMaterial5" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="errorMaterial6" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorMaterial2" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorMaterial1" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorMaterial4" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorMaterial5" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorMaterial6" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
@@ -126,9 +123,8 @@
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jLabel2" min="-2" pref="141" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <EmptySpace min="23" pref="23" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -148,37 +144,35 @@
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Group type="102" attributes="0">
-                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Group type="102" attributes="0">
-                                                      <Group type="103" groupAlignment="1" attributes="0">
-                                                          <Group type="102" attributes="0">
-                                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                                  <Component id="rbMaterial1" min="-2" max="-2" attributes="0"/>
-                                                                  <Component id="errorMaterial1" min="-2" max="-2" attributes="0"/>
-                                                              </Group>
-                                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                              <Component id="rbMaterial2" min="-2" max="-2" attributes="0"/>
-                                                          </Group>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <Component id="rbMaterial1" min="-2" max="-2" attributes="0"/>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Component id="rbMaterial2" min="-2" max="-2" attributes="0"/>
                                                           <Component id="errorMaterial2" min="-2" max="-2" attributes="0"/>
                                                       </Group>
-                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                      <Component id="rbMaterial3" min="-2" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Component id="errorMaterial3" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="errorMaterial1" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
-                                              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                                              <Component id="rbMaterial4" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="rbMaterial3" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="errorMaterial4" min="-2" max="-2" attributes="0"/>
+                                          <Component id="errorMaterial3" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="rbMaterial5" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                                      <Component id="rbMaterial4" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="errorMaterial5" min="-2" max="-2" attributes="0"/>
+                                  <Component id="errorMaterial4" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="rbMaterial6" min="-2" max="-2" attributes="0"/>
+                              <Component id="rbMaterial5" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="errorMaterial5" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="rbMaterial6" min="-2" max="-2" attributes="0"/>
                           <Component id="errorMaterial6" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
@@ -224,8 +218,6 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jButton3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
               </Group>
@@ -258,10 +250,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="txtMaterial3" min="-2" pref="30" max="-2" attributes="0"/>
                   <EmptySpace pref="81" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -307,14 +296,6 @@
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Imprimir Lista"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
-          </Events>
-        </Component>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JRadioButton" name="rbMaterial1">
@@ -356,9 +337,6 @@
           </StringArray>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -389,11 +367,11 @@
         <Property name="text" type="java.lang.String" value="del carro para eliminar"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="errorMaterial1">
+    <Component class="javax.swing.JLabel" name="errorMaterial3">
     </Component>
     <Component class="javax.swing.JLabel" name="errorMaterial2">
     </Component>
-    <Component class="javax.swing.JLabel" name="errorMaterial3">
+    <Component class="javax.swing.JLabel" name="errorMaterial1">
     </Component>
     <Component class="javax.swing.JLabel" name="errorMaterial4">
     </Component>
